<resources>
    <string name="app_name">Keshav Club</string>
    <string name="otp">OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_valid_mobile_no">Enter a valid mobile number</string>
    <string name="welcome">Welcome!</string>
    <string name="please_select_your_user_type">Please select your user type to Keshav Application.</string>
    <string name="engineer">Engineer</string>
    <string name="mason">Mason</string>
    <string name="dealer">Dealer</string>
    <string name="sub_dealer">Sub Dealer</string>
    <string name="support_executive">Support Executive</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="membership_id">Membership ID</string>
    <string name="point_balance">Point Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="claim_purchase">Claim Purchase</string>
    <string name="my_purchase_claim">My Purchase Claim</string>
    <string name="redemption_catalogue">Redemption Catalogue</string>
    <string name="my_redemption">My Redemption</string>
    <string name="my_earning">My Earning</string>
    <string name="worksite_details">Worksite Details</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="helpline">Helpline</string>
    <string name="offers_and_promotions">Offers and Promotions</string>
    <string name="lodge_query">Lodge Query</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="refer_your_friends_to_earn_exciting_rewards">Refer your Friends to Earn\nExciting Rewards</string>
    <string name="get_exciting_rewards_when_your_friend_enrolls_nto_the_program">Get Exciting rewards when your friend enrolls\nto the program</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_invite">Send invite</string>
    <string name="filter">Filter</string>
    <string name="approved">Approved</string>
    <string name="product_name">Product Name</string>
    <string name="order_quantity">Order Quantity</string>
    <string name="approved_quantity">Approved Quantity</string>
    <string name="remarks">Remarks</string>
    <string name="my_purchase_filter">My Purchase Filter</string>
    <string name="status">Status</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="date_range">Date Range</string>
    <string name="select_from_date">Select From Date</string>
    <string name="clear">Clear</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="select_to_date">Select To Date</string>
    <string name="worksite_filter">Worksite Filter</string>
    <string name="work_details">Work Details</string>
    <string name="work_level">Work Level</string>
    <string name="tentative_date">Tentative date</string>
    <string name="owner_name">Owner Name</string>
    <string name="engineer_name">Engineer Name</string>
    <string name="create_new">Create New</string>
    <string name="site_details">Site Details</string>
    <string name="site_location">Site Location</string>
    <string name="user_details">User Details</string>
    <string name="upload_site_images">Upload Site Images</string>
    <string name="capture_site_images_to_submit_the_details">capture site images to submit the details</string>
    <string name="change_image">Change image</string>
    <string name="capture_current_location">Capture Current Location</string>
    <string name="next">Next</string>
    <string name="owner_details">Owner Details</string>
    <string name="owner_mobile_number">Owner Mobile Number</string>
    <string name="engineer_details">Engineer Details</string>
    <string name="engineer_number">Engineer Mobile Number</string>
    <string name="tentative_date_of_completion">Tentative Date of Completion</string>
    <string name="user_type">User Type</string>
    <string name="select_product">Select Product</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="swipe_to_claim">Swipe to Claim</string>
    <string name="to">To</string>
    <string name="points">Points</string>
    <string name="qty">Quantity</string>
    <string name="credited_points">Credited Points</string>
    <string name="my_earnings_filter">My Earnings Filter</string>
    <string name="view">View</string>
    <string name="write_query_details">Write Query Details</string>
    <string name="please_submit_your_query_using_this_form">Please submit your query using this form</string>
    <string name="select_your_topic">Select your topic</string>
    <string name="query_summary">Query Summary</string>
    <string name="write_query">Write your query</string>
    <string name="query_details">Query details</string>
    <string name="submit_query">Submit Query</string>
    <string name="browse_image">Browse Image</string>
    <string name="select_topic_to_lodge_a_query">Select Topic to Lodge a Query</string>
    <string name="enrollment_related">Enrollment Related</string>
    <string name="redemptions_related">Redemptions Related</string>
    <string name="unable_to_use_mobile_app">Unable to use Mobile app</string>
    <string name="unable_to_raise_purchase_claim">Unable to raise purchase claim</string>
    <string name="complaints">Complaints</string>
    <string name="points_related">Points related</string>
    <string name="product_complaints">Product Complaints</string>
    <string name="feedback">Feedback</string>
    <string name="information_about_program">Information about program</string>
    <string name="call_on_following">For any questions on the Keshav Cement Program.\n Please give a miss call on the following number</string>
    <string name="give_a_missed_call_on">GIVE A MISSED CALL ON</string>
    <string name="redeemable_points">Redeemable Points</string>
    <string name="redeem_your_earned_points_in_various_ways">Redeem your Earned Points in various ways</string>
    <string name="select_redemption_type">Select Redemption Type</string>
    <string name="products">Products</string>
    <string name="evouchers">eVouchers</string>
    <string name="cash_transfer">Cash Transfer</string>
    <string name="total_points">Total Points</string>
    <string name="add">Add</string>
    <string name="sale_and_earn">Sale &amp; Earn</string>
    <string name="start_earning">Start Earning</string>
    <string name="start_selling">Start Selling</string>
    <string name="enrollment">Enrollment</string>
    <string name="pending_claim_request">Pending Claim Request</string>
    <string name="cash_transfer_approval">Cash Transfer Approval</string>
    <string name="my_activity">My Activity</string>
    <string name="my_support_executive">My Support Executive</string>
    <string name="my_redemption_filter">My Redemption Filter</string>
    <string name="offers">Offers</string>
    <string name="evoucher">eVouchers</string>
    <string name="query">Query</string>
    <string name="chat">Chat</string>
    <string name="my_earnings">My Earning</string>
    <string name="my_redemptions">My Redemption</string>
    <string name="worksite">Worksite</string>
    <string name="claim_history">Claim History</string>
    <string name="cash_transfer_history">Cash Transfer History</string>
    <string name="new_sale">New Sale</string>
    <string name="customer_type">Customer Type</string>
    <string name="claim_history_filter">Claim History Filter</string>
    <string name="cash_transfer_name">Cash Transfer Name</string>
    <string name="cash_history">Cash History</string>
    <string name="create_support_executive">Create Support Executive</string>
    <string name="my_activity_filter">My Activity Filter</string>
    <string name="my_profile">My Profile</string>
    <string name="cash_voucher">Cash Voucher</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_customer">Select Customer</string>
    <string name="swipe_to_place_order">Swipe to Place Order</string>
    <string name="my_cart">My Cart</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="edit_address">Edit Address</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong. Please try again later !</string>
    <string name="mobile_already_exist">Mobile number already exist</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="please_enter_referral_code">Please enter the referral code</string>
    <string name="invalid_referal_code">Invalid Referral Code</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_firm_name">Enter firm name</string>
    <string name="enter_valid_emailid">Enter valid Email ID</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_pin_code">Enter pincode</string>
    <string name="invalid_pin_code">Invalid pincode</string>
    <string name="select_your_state">Select your state</string>
    <string name="select_your_district">Select your district</string>
    <string name="enter_aadhar_number">Enter aadhar number</string>
    <string name="enter_gst_number">Enter GST number</string>
    <string name="enter_member_id">Enter member id</string>
    <string name="membe_doesnt_exist">Member doesn\'t exist</string>
    <string name="select_your_taluk">Select your taluk!</string>
    <string name="for_registering_to_the_keshav_cement_program">for registering to the Keshav Cement Program. Our Executive will contact you for verification</string>
    <string name="thank_you">Thank you!</string>
    <string name="enter_valid_aadhar_number">Enter valid aadhar number</string>
    <string name="prompt_password">Enter password</string>
    <string name="enter_mobile_number_membership_id">Enter Mobile Number/Membership ID</string>
    <string name="enter_valid_mobile_number_membership_id">Enter a Valid Mobile Number/Membership ID</string>
    <string name="your_account_has_been_deactivated">Your account has been deactivated! Kindly contact the administrator.</string>
    <string name="incorrect_account_type">Incorrect account type!</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="customer_already_activated">Customer is already activated</string>
    <string name="your_account_is_in_pending_kindly_contact_your_administrator">Your account is in Pending, Kindly contact your administrator!</string>
    <string name="you_are_not_eligible_to_activate_your_account">You are not eligible to activate your account</string>
    <string name="gst_number_mandatory">GST number is mandatory!</string>
    <string name="aadhar_number_mandatory">Aadhar number is mandatory!</string>
    <string name="invalid_aadhar_number">Invalid aadhar number!</string>
    <string name="firm_name_mandatory">Firm name is mandatory</string>
    <string name="mobile_number_mandatory">Mobile number is mandatory</string>
    <string name="member_id_mandatory">Member ID is mandatory</string>
    <string name="customer_type_mandatory">Customer type is mandatory</string>
    <string name="invalid_mobile_number">Invalid mobile number!</string>
    <string name="enter_name">Enter name!</string>
    <string name="enter_password">Enter Password!</string>
    <string name="your_account_has_been_activated_successfully">Your account has been activated successfully Login to the app for more benefits</string>
    <string name="claim">Claim</string>
    <string name="purchase_request">Purchase Request</string>
    <string name="product_catalogue">Product Catalogue</string>
    <string name="click_here">Click here</string>
    <string name="your_profile_update_successfully">Your profile updated successfully.</string>
</resources>