<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.worksiteDetails.WorksiteDetailsFragment">

    <!--Content Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/filterOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_profile_bg"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingTop="8dp"
            android:paddingEnd="25dp"
            android:paddingBottom="8dp">


            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/filter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/filter"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/worksite_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="60dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_worksite_details" />

        <include
            android:id="@+id/no_data_fount"
            layout="@layout/no_data_found_animation_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />


    </LinearLayout>


    <!--Filter Layout-->
    <LinearLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:elevation="25dp"
        android:visibility="gone"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/worksite_filter"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/filterClose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/close" />
        </RelativeLayout>

        <!-- Status -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/status"
            android:textSize="14sp"
            android:textColor="@color/color18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/filter_approved"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/unselected_filter2"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/approved"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/filter_pending"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/unselected_filter2"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/pending"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/filter_rejected"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/unselected_filter2"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/rejected"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

        </LinearLayout>


        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear_btn"
                android:layout_width="123dp"
                android:layout_height="35dp"
                android:background="@drawable/edit_profile_bg"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/filter_ok_btn"
                android:layout_width="123dp"
                android:layout_height="35dp"
                android:background="@drawable/edit_profile_bg"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginStart="10dp"
                android:text="@string/apply_filter"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp" />



        </LinearLayout>

    </LinearLayout>


    <!--Create New-->
    <LinearLayout
        android:id="@+id/createNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_profile_bg"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingTop="8dp"
        android:paddingEnd="25dp"
        android:elevation="20dp"
        android:paddingBottom="8dp">


        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_baseline_person_add_alt_1_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/create_new"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>
    
</FrameLayout>